--- a/P_SML.ipynb
+++ b/P_SML.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2732d0a5",
+   "cell_type": "markdown",
+   "id": "d70c242d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## 2.1 Contents<a id='2.1_Contents'></a>"
+    "## 2.1 Contents<a id='2.1_Contents'></a>\n",
+    "* [2 Data wrangling](#2_Data_wrangling)\n",
+    "  * [2.1 Contents](#2.1_Contents)\n",
+    "  * [2.2 Introduction](#2.2_Introduction)"
    ]
   },
   {
@@ -31,7 +32,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -46,6 +47,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "48b71bc540cd0acc4a5cff3b2d8263e022bbde63c646d15e8a8dd6ce6c9dde39"
+   }
   }
  },
  "nbformat": 4,
