--- a/P_SML.ipynb
+++ b/P_SML.ipynb
@@ -5,26 +5,83 @@
    "id": "d70c242d",
    "metadata": {},
    "source": [
-    "## 2.1 Contents<a id='2.1_Contents'></a>\n",
-    "* [2 Data wrangling](#2_Data_wrangling)\n",
-    "  * [2.1 Contents](#2.1_Contents)\n",
-    "  * [2.2 Introduction](#2.2_Introduction)"
+    "## Space Mission Launches<a id='Space Mission Launches'></a>\n",
+    "* Content\n",
+    "  * [Introduction](##1._Introduction)\n",
+    "  * [Import](#2.2_Introduction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e49fbf4e",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b038655a",
+   "metadata": {},
+   "source": [
+    "About Dataset\n",
+    "You'll find an incredibly rich dataset from nextspaceflight.com that includes all the space missions since the beginning of Space Race between the USA and the Soviet Union in 1957! It has data on the mission status (success/failure), the cost of the mission, the number of launches per country, and much much more. There's so much we can learn from this dataset about the dominant organisations and the trends over time. For example:\n",
+    "\n",
+    "Who launched the most missions in any given year?\n",
+    "\n",
+    "How has the cost of a space mission varied over time?\n",
+    "\n",
+    "Which months are the most popular for launches?\n",
+    "\n",
+    "Have space missions gotten safer or has the chance of failure remained unchanged?\n",
+    "\n",
+    "This Dataset contains information on dates, costs, and status regarding space missions from different organisations such as NASA, SpaceX, CASC\n",
+    "\n",
+    "Link to dataset: https://www.kaggle.com/datasets/sefercanapaydn/mission-launches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4724db5b",
+   "metadata": {},
+   "source": [
+    "## 2. Import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3d3bae26",
+   "execution_count": 1,
+   "id": "9c71ae84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb9dc86b",
+   "metadata": {},
+   "source": [
+    "## 2.1 Load the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "692c5ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('/Users/sangth/Desktop/Space_project /Space_Mission_Launches/Data/mission_launches.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "410d74bd",
+   "id": "a473bf9c",
    "metadata": {},
    "outputs": [],
    "source": []
